<resources>
    <string name="app_name">EDIOS</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_if_selection">if_selection</string>
    <string name="set_volume">Set Volume</string>

    <string name="action_feedback">feedback</string>
    <string name="nav_create_event">Create Event</string>
    <string name="nav_my_events">My Events</string>
    <string name="nav_all_services">All Services</string>
    <string name="nav_all_events">All Events</string>
    <string name="nav_settings">Setting</string>
    <string name="content_description_for_add_new_events_imagebutton">Add New Events</string>
    <string name="title_activity_create_event">Create Event</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="IF">IF</string>
    <string name="then">THEN</string>
    <string name="save">SAVE</string>
    <string name="select">Select</string>
    <string name="Cancel">to_cancel</string>
    <string name="textview">TextView</string>
    <string name="Content_Description_cancel_Button">cancel button to remove the seleced</string>
    <string name="time_date"><![CDATA[Time & Date]]></string>
    <string name="missed_calls">Missed Calls</string>
    <string name="proceed">Proceed</string>
    <string name="description_missed_calls"><![CDATA[This is the description for the row Missed Calls in ifSelectionActivity This is the description for the row Missed Calls in ifSelectionActivity This is the description for the row Missed Calls in ifSelectionActivity]]></string>
    <string name="description_date_time"><![CDATA[This is the description for the row Date & Time in ifSelectionActivity This is the description for the row Date & Time in ifSelectionActivity This is the description for the row Date & Time in ifSelectionActivity This is the description for the row Date & Time in ifSelectionActivity This is the description for the row Date & Time in ifSelectionActivity This is the description for the row Date & Time in ifSelectionActivity This is the description for the row Date & Time in ifSelectionActivity This is the description for the row Date & Time in ifSelectionActivity This is the description for the row Date & Time in ifSelectionActivity This is the description for the row Date & Time in ifSelectionActivity This is the description for the row Date & Time in ifSelectionActivity This is the description for the row Date & Time in ifSelectionActivity This is the description for the row Date & Time in ifSelectionActivity This is the description for the row Date & Time in ifSelectionActivity This is the description for the row Date & Time in ifSelectionActivity]]></string>
    <string name="description_alarm">This is the description</string>
    <string name="description_battery_power">This is the description for battery power</string>
    <string name="description_post_http">This is the description</string>
    <string name="description_set_volume">This is the description for setting ringtone volume</string>
    <string name="ok">Got it!</string>
    <string name="title_activity_alarm_testing">AlarmTestingActivity</string>
    <string name="battery_power">Battery Power</string>
    <string name="ringtone_volume">Set Volume</string>
    <string name="alarm_notification">Alarm Notification</string>
    <string name="type_alarm_message">Type Alarm Message</string>
    <string name="server_address">Server Address</string>
    <string name="text_message">Text Message</string>
    <string name="checkalarm">CheckAlarm</string>
    <string name="title_activity_send_data">send_data</string>
    <string name="send_data">Send Data</string>
    <string name="if_missed">If_missed</string>
    <string name="then_submit">Then_Submit</string>
    <string name="send_call_logs">Send Call logs</string>
    <string name="done">Done</string>

</resources>
