<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_create_event_id1"
            android:icon="@drawable/ic_add_new_event"
            android:title="@string/nav_create_event"
            android:iconTint="@color/red"/>
        <item
            android:id="@+id/nav_my_events_id"
            android:title="@string/nav_my_events"
            android:icon="@drawable/ic_my_event_list"/>
        <item
            android:id="@+id/nav_all_events"
            android:title="@string/nav_all_events"
            android:icon="@drawable/ic_all_events"/>

        <item
            android:id="@+id/nav_all_services"
            android:title="@string/nav_all_services"
            android:icon="@drawable/ic_all_services"/>

        <item
            android:id="@+id/nav_setting_id"
            android:title="@string/nav_settings"
            android:icon="@drawable/ic_settings"/>
    </group>

</menu>
